# simp-pluginhost

./: .gitignore  CMakeLists.txt  LICENSE
api/: CMakeLists.txt
api/interface/: CMakeLists.txt
api/interface/pluginhost/: interface.hpp
api/serverlib/: CMakeLists.txt
api/serverlib/include/pluginhost/: server.hpp
api/serverlib/source/: server.cpp
source/: main.cpp  plugin.cpp  plugin.hpp  pluginmgr.cpp
testserver/: CMakeLists.txt
testserver/source/: main.cpp
